OPIK-1955 introduce the new strategy