@@ -4,6 +4,7 @@ import com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem.FeedbackScore
 import com.comet.opik.api.PromptType;
 import com.comet.opik.api.ScoreSource;
 import com.comet.opik.api.Trace;
+import com.comet.opik.domain.llm.structuredoutput.StructuredOutputStrategy;
 import com.comet.opik.utils.TemplateParseUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -13,15 +14,6 @@ import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.model.chat.request.ChatRequest;
-import dev.langchain4j.model.chat.request.ResponseFormat;
-import dev.langchain4j.model.chat.request.ResponseFormatType;
-import dev.langchain4j.model.chat.request.json.JsonBooleanSchema;
-import dev.langchain4j.model.chat.request.json.JsonIntegerSchema;
-import dev.langchain4j.model.chat.request.json.JsonNumberSchema;
-import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
-import dev.langchain4j.model.chat.request.json.JsonSchema;
-import dev.langchain4j.model.chat.request.json.JsonSchemaElement;
-import dev.langchain4j.model.chat.request.json.JsonStringSchema;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
@@ -42,7 +34,6 @@ import java.util.stream.StreamSupport;
 
 import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeCode;
 import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeMessage;
-import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeOutputSchema;
 import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
 
 @UtilityClass
@@ -51,10 +42,6 @@ public class OnlineScoringEngine {
 
     static final String SCORE_FIELD_NAME = "score";
     static final String REASON_FIELD_NAME = "reason";
-
-    private static final String SCORE_FIELD_DESCRIPTION = "the score for ";
-    private static final String REASON_FIELD_DESCRIPTION = "the reason for the score for ";
-    private static final String DEFAULT_SCHEMA_NAME = "scoring_schema";
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
@@ -67,13 +54,13 @@ public class OnlineScoringEngine {
      * @return a request to trigger to any supported provider with a ChatLanguageModel
      */
     public static ChatRequest prepareLlmRequest(
-            @NotNull LlmAsJudgeCode evaluatorCode, Trace trace) {
-        var responseFormat = toResponseFormat(evaluatorCode.schema());
+            @NotNull LlmAsJudgeCode evaluatorCode, Trace trace, StructuredOutputStrategy structuredOutputStrategy) {
         var renderedMessages = renderMessages(evaluatorCode.messages(), evaluatorCode.variables(), trace);
-        return ChatRequest.builder()
-                .messages(renderedMessages)
-                .responseFormat(responseFormat)
-                .build();
+        var chatRequestBuilder = ChatRequest.builder().messages(renderedMessages);
+
+        structuredOutputStrategy.apply(chatRequestBuilder, renderedMessages, evaluatorCode.schema());
+
+        return chatRequestBuilder.build();
     }
 
     /**
@@ -107,7 +94,7 @@ public class OnlineScoringEngine {
                     };
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static Map<String, String> toReplacements(Map<String, String> variables, Trace trace) {
@@ -168,44 +155,6 @@ public class OnlineScoringEngine {
             log.debug("Couldn't find path '{}' inside json {}: {}", path, json, e.getMessage());
             return null;
         }
-    }
-
-    static ResponseFormat toResponseFormat(@NotNull List<LlmAsJudgeOutputSchema> schema) {
-        // convert <name, type, description> into something like
-        // "${name}": { "score": { "type": "${type}" , "description": ${description}", "reason": { "type" : "string" }}
-        Map<String, JsonSchemaElement> structuredFields = schema.stream()
-                .map(scoreDefinition -> Map.entry(scoreDefinition.name(),
-                        JsonObjectSchema.builder()
-                                .description(scoreDefinition.description())
-                                .required(SCORE_FIELD_NAME, REASON_FIELD_NAME)
-                                .addProperties(Map.of(
-                                        SCORE_FIELD_NAME, switch (scoreDefinition.type()) {
-                                            case BOOLEAN -> JsonBooleanSchema.builder()
-                                                    .description(SCORE_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                    .build();
-                                            case INTEGER -> JsonIntegerSchema.builder()
-                                                    .description(SCORE_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                    .build();
-                                            case DOUBLE -> JsonNumberSchema.builder()
-                                                    .description(SCORE_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                    .build();
-                                        },
-                                        REASON_FIELD_NAME,
-                                        JsonStringSchema.builder()
-                                                .description(REASON_FIELD_DESCRIPTION + scoreDefinition.name())
-                                                .build()))
-                                .build()
-
-                ))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
-        var allPropertyNames = structuredFields.keySet().stream().toList();
-        var schemaBuilder = JsonObjectSchema.builder().required(allPropertyNames).addProperties(structuredFields)
-                .build();
-        var jsonSchema = JsonSchema.builder().name(DEFAULT_SCHEMA_NAME).rootElement(schemaBuilder).build();
-        return ResponseFormat.builder()
-                .type(ResponseFormatType.JSON)
-                .jsonSchema(jsonSchema)
-                .build();
     }
 
     public static List<FeedbackScoreBatchItem> toFeedbackScores(@NotNull ChatResponse chatResponse) {
